# secunda_assignment

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  init-db.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 54596d65c00c_add_tables.py
src/secunda_assignment/: main.py  security.py  seed.py
src/secunda_assignment/api/v1/: buildings.py  business_categories.py  organizations.py  phone_numbers.py
src/secunda_assignment/storage/: db.py  exceptions.py  models.py  repositories.py  schemas.py
src/secunda_assignment/storage/sql/: init.sql
