[tool.poetry]
name = "secunda-assignment"
version = "0.1.0"
description = "REST API test assignment for Secunda"
authors = ["Rustam Abdulatipov <rabdulatipoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.119.1"}
pydantic = "^2.12.3"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
alembic = "^1.17.0"
pydantic-extra-types = "^2.10.6"
phonenumbers = "^9.0.16"
sqlalchemy-utils = "^0.42.0"
geoalchemy2 = "^0.18.0"
shapely = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
